* FEATURE: Added new option KSI_ASYNC_OPT_CONF_CONSOLIDATE_CALLBACK for overriding default consolidation handling.
* BUGFIX: Fixed possible crash when using multiple KSI_AsyncService instances with HTTP endpoints in different threads.
* IMPROVEMENT: Added async request recycle handling for reducing memory allocations.
* BUGFIX: Fixed high availability server aggregation persion configuration consolodation.
* IMPROVEMENT: Helper interface for creating signing KSI_AsyncHandle.
* FEATURE: Added async service option KSI_ASYNC_OPT_CONNECTION_STATE_CALLBACK for setting connection state listener.
* FEATURE: Added prefix string format support to KSI_LOG_logBlob. Interface remains fully backwards compatible.
* IMPROVEMENT: Enhanced async client logging, by adding client and request id's. Provides more distinguishable log entries in case of high availability service.
* IMPROVEMENT: Added async TCP peer connection POLLHUP signal handling. Requests will return immediately with error state instead of waiting for timeout.
* IMPROVEMENT: Failing test TestPKICertificateToString fixed with corrections made to the expired certificates.
* BUGFIX: Made URI schemes case insensitive.

Version 3.19

* FEATURE: Added find function to KSI_List interface.

Version 3.18
* IMPROVEMENT: Function KSI_CTX_getLastFailedSignature is deprecated. See KSI_VERIFICATION_POLICY_EMPTY for replacement.
* BUGFIX: Made URI schemes case insensitive.

Version 3.18

* BUGFIX: Negative enum value is not ISO standard.

2018-08-27 release(3.18.2836)
* FEATURE: High Availability add-on to the non-blocking network interface.
* FEATURE: Added max tree level to tree builder.
* IMPROVEMENT: KSI_DataHash and KSI_DataHasher accept NULL as KSI context.
* IMPROVEMENT: Added KSI_TlvElement_removeElement function.
* IMPROVEMENT: Changed the curl HTTP debug messages for return codes and internal error messages.
* IMPROVEMENT: KSI_DataHash and KSI_DataHasher accept NULL as KSI context.